<package>
  <name>rqt_kuka_view</name>
  <version>0.1.2</version>
  <description>rqt_kuka_view provides a gui setting kuka trajectories.</description>
  <maintainer email="llorrain@ualberta.com">Laura Petrich</maintainer>

  <license>BSD</license>

  <author>Laura Petrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
  <run_depend>qt_gui</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>

</package>
